# tmui

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  dune  dune-project  project.env  tmui.opam
db/: README.md
nix/: build-shell.nix  default.nix  docker-image.nix  tmui-server-image.nix  tmui-server.nix
nix/tmui-flake/: flake.nix
nix/tmui-server-flake/: flake.nix
src/lib/: dune  tmui.ml
test/: dune
test/requests/: dev.http
test/unit/: dune  tmui_tests.ml  unit.ml
